--- a/RecipeWebApi/appsettings.Development.json
+++ b/RecipeWebApi/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AWS": {
+    "ServiceURL": "http://localhost:4566",
+    "BucketName": "my-bucket",
+    "Region": "us-east-1",
+    "AccessKey": "test",
+    "SecretKey": "test"
   }
+  
 }
