--- a/RecipeWebApi/appsettings.json
+++ b/RecipeWebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlConnection": "Server=localhost,1433;Database=RecipeDb;User Id=sa;Password=YourPassword123;TrustServerCertificate=True;"
+    "sqlConnection": "Server=localhost,1433;Database=RecipeDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
   },
   "JwtSettings": {
     "validIssuer": "recipeapi",
